--- a/main/Properties/Resources.resx
+++ b/main/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="toggleOn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\toggleOn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ReloadIconWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ReloadIconWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
